New Post: Your CPU has a Backdoor
- New blog post
- Disabled minification on generation
- Removed some unused files in the PaperMod theme.

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -20,3 +20,4 @@ jobs:
                   githubToken: ${{ secrets.PERSONAL_TOKEN }}
                   branch: generated
                   cname: nchristopher.me
+                  args: --gc --cleanDestinationDir
