--- a/config.yml
+++ b/config.yml
@@ -1,11 +1,12 @@
 baseURL: "https://nchristopher.me/"
 title: Nicholas Christopher
-paginate: 5
 theme: hugo-PaperMod
+paginate: 5
 
 enableInlineShortcodes: true
 enableRobotsTXT: true
 enableEmoji: true
+
 buildDrafts: false
 buildFuture: false
 buildExpired: false
@@ -13,6 +14,8 @@ buildExpired: false
 minify:
     disableXML: true
     # minifyOutput: true
+
+copyright: "&copy; 2021 Nicholas Christopher • [Source](https://github.com/nickhasoccured/nchristopher.me)"
 
 outputs:
     home:
@@ -82,10 +85,10 @@ menu:
           name: About
           url: /about/
           weight: 1
-        - identifier: tags
-          name: Tags
-          url: /tags/
-          weight: 2
+        # - identifier: tags
+        #   name: Tags
+        #   url: /tags/
+        #   weight: 2
         - identifier: archive
           name: Archive
           url: /archive/
@@ -99,15 +102,6 @@ taxonomies:
     category: categories
     tag: tags
     series: series
-
-# markup:
-#     highlight:
-#         # anchorLineNos: true
-#         codeFences: true
-#         guessSyntax: true
-#         lineNos: true
-#         # noClasses: false
-#         style: monokai
 
 privacy:
     vimeo:
