--- a/config.yml
+++ b/config.yml
@@ -50,7 +50,7 @@ params:
         - name: Twitter
           url: "https://twitter.com/nickhasoccured"
         - name: GitHub
-          url: "https://github.com/nickhasoccured"
+          url: "https://github.com/nchristopher"
         - name: Reddit
           url: "https://reddit.com/u/nickhasoccured"
         - name: Keybase
