--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -29,4 +29,4 @@ jobs:
               with:
                   github_token: ${{ secrets.GITHUB_TOKEN }}
                   publish_branch: generated
-                  publish_dir: ./
+                  publish_dir: ./public
