✨ Added CNAME to action

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -28,5 +28,6 @@ jobs:
               uses: peaceiris/actions-gh-pages@068dc23d9710f1ba62e86896f84735d869951305
               with:
                   github_token: ${{ secrets.GITHUB_TOKEN }}
+                  cname: nchristopher.me
                   publish_branch: generated
                   publish_dir: ./public
