--- a/config.yml
+++ b/config.yml
@@ -49,6 +49,8 @@ params:
     socialIcons:
         - name: GitHub
           url: "https://github.com/nchristopher"
+        - name: Twitter
+          url: "https://twitter.com/nickhasoccured"
         - name: Reddit
           url: "https://reddit.com/u/nickhasoccured"
         - name: Mastodon
