--- a/config.yml
+++ b/config.yml
@@ -42,9 +42,9 @@ params:
     images: ["img/og-banner.png"]
 
     homeInfoParams:
-        Title: "👋 Hello, I'm Nick"
+        Title: "👋 Hey there, I'm Nick"
         Content: >
-            I make open-source software for the internet. My projects aim to be useful to me or (*hopefully*) useful to others. I'm currently using web-based languages, but I'm looking to branch out in the future!
+            I write code, sometimes it works. I'm currently using a (mostly) web-based tech stack, but I'm looking to branch out in the future! I'm a big fan of privacy & open-source software, so most of my projects reflect that!
 
     socialIcons:
         - name: GitHub
