--- a/config.yml
+++ b/config.yml
@@ -44,7 +44,7 @@ params:
     homeInfoParams:
         Title: "👋 Hey there, I'm Nick"
         Content: >
-            I write code, sometimes it works. I'm currently using a (mostly) web-based tech stack, but I'm looking to branch out in the future! I'm a big fan of privacy & open-source software, so most of my projects reflect that!
+            I write code, sometimes it works. I'm currently using a (mostly) web-based tech stack, but I'm looking to branch out in the future! I'm a big fan of privacy & open-source software, so most of my projects reflect that.
 
     socialIcons:
         - name: GitHub
